# bunting-agents

./: .gitignore  CLAUDE.md
agents/: README.md  document_ocr_agent.py  document_processor.py  document_text_parser.py  example_usage.py  requirements.txt  table_parser_agent.py
claudebot/: .env.example  README.md  bot.py  requirements.txt
contract-intelligence/: API_USAGE.md  Dockerfile  docker-compose.yml  main.py
maggie-coldemail/: .env.example  Dockerfile  README.md  app.py  campaign_runner.py  docker-compose.yml  draft_engine.py  magnus_client.py  mailer.py  models.py  spares_client.py  supabase_client.py
maggie-spares/: .env.template  Dockerfile  ai_engine.py  app.py  baq_reference.py  bom_search.py  docker-compose.yml  email_poller.py  email_responder.py  epicor_client.py  requirements.txt
pete-sales-agent/: batch_sender.py  batch_state_seed.json  campaign.py  campaign_api.py  classifier.py  config.py  deploy.sh  email_handler.py  inbox_manager.py  knowledge.py  nda_handler.py  responder.py  (+4 more)
projects/DocumentAnalyzer2/: .dockerignore  .env.template  .replit  Dockerfile  agent1_parser.py  agent2_risk.py  agent3_report.py  app.py  app_backup.py  app_corrupted.py  build-electron.js  deploy.py  docker-compose.yml  electron_startup.py  main-production.js  main.js  package-lock.json  package.json  pyproject.toml  replit.md  seller.md  seller_baseline_terms.md  start-docker.sh  start-electron.bat  start-electron.sh  t3rms_analyzer.py
projects/DocumentAnalyzer2/static/: app.js  style.css
projects/DocumentAnalyzer2/templates/: base.html  index.html  results.html
(+98 files in other folders)
